# valentine

./: (don't comit) accesing_vm.md  .env.example  .env.template  .gitignore  PROJECT_SPECS.md  README.md  TESTING.md  chats.md  checklist.md  docker-compose.yml  instructions.md  new-direction.md  pyproject.toml  skills-lock.json  ssh-bypass-guide.md  valentine.service
.agents/skills/social-media-management/: SKILL.md
.claude/: settings.local.json
configs/: mcp-servers.example.json
docs/archive/: v1-upgrades-checklist.md
docs/superpowers/plans/: 2026-03-21-onboarding-admin-memory.md  2026-03-21-zeroclaw-implementation.md  2026-03-22-valentine-100-percent.md  2026-03-22-valentine-enhancement-plan.md
docs/superpowers/specs/: 2026-03-21-onboarding-admin-memory-design.md  2026-03-21-zeroclaw-architecture-design.md
frontend-miniapp/: index.html  package-lock.json  package.json  vite.config.ts
frontend-miniapp/src/: App.tsx  index.css
scripts/: deploy.sh  setup-vm.sh  skills.sh
scripts/skills-builtin/: audio-transcribe.sh  audio-tts.sh  cli-utils.sh  deploy.sh  github-repo.sh  server-monitor.sh
scripts/skills-builtin/git-status/: run.sh  skill.toml
scripts/skills-builtin/system-info/: run.sh  skill.toml
src/valentine/: __init__.py  access.py  config.py  identity.py  main.py  models.py  security.py  utils.py
src/valentine/agents/: __init__.py  base.py  (+8 more)
tests/: conftest.py  test_agents.py  test_cortex.py  test_docgen.py  test_error_boundary.py  test_evolution.py  test_models.py  test_nexus.py  test_preview.py  test_rag.py  test_senses.py  test_utils.py
(+35 files in other folders)
