[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valentine"
version = "2.0.0"
description = "ZeroClaw multi-agent AI assistant"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "duckduckgo-search>=6.0",
    "edge-tts>=6.1",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "openai-whisper>=20231117",
    "pydub>=0.25",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "mem0ai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
